feat: improve API and add new endpoints and responses
